# micro/api/api/system/v1/auth_http.pb.go
@@ -1,264 +1,0 @@
-// Code generated by protoc-gen-go-http. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-http v2.7.3
-// - protoc             v4.25.3
-// source: api/system/v1/auth.proto
-
-package v1
-
-import (
-	context "context"
-	http "github.com/go-kratos/kratos/v2/transport/http"
-	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
-)
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the kratos package it is being compiled against.
-var _ = new(context.Context)
-var _ = binding.EncodeURL
-
-const _ = http.SupportPackageIsVersion1
-
-const OperationAuthCaptcha = "/api.system.v1.Auth/Captcha"
-const OperationAuthLogin = "/api.system.v1.Auth/Login"
-const OperationAuthLogout = "/api.system.v1.Auth/Logout"
-const OperationAuthRegister = "/api.system.v1.Auth/Register"
-const OperationAuthRouters = "/api.system.v1.Auth/Routers"
-const OperationAuthUserInfo = "/api.system.v1.Auth/UserInfo"
-
-type AuthHTTPServer interface {
-	Captcha(context.Context, *CaptchaReq) (*CaptchaReply, error)
-	Login(context.Context, *LoginReq) (*LoginReply, error)
-	Logout(context.Context, *LogoutReq) (*LogoutReply, error)
-	Register(context.Context, *RegisterReq) (*RegisterReply, error)
-	Routers(context.Context, *RoutersReq) (*RoutersReply, error)
-	UserInfo(context.Context, *UserInfoReq) (*UserInfoReply, error)
-}
-
-func RegisterAuthHTTPServer(s *http.Server, srv AuthHTTPServer) {
-	r := s.Route("/")
-	r.POST("/v1/logout", _Auth_Logout0_HTTP_Handler(srv))
-	r.GET("/v1/captchaImage", _Auth_Captcha0_HTTP_Handler(srv))
-	r.POST("/v1/login", _Auth_Login0_HTTP_Handler(srv))
-	r.GET("/v1/getInfo", _Auth_UserInfo0_HTTP_Handler(srv))
-	r.GET("/v1/getRouters", _Auth_Routers0_HTTP_Handler(srv))
-	r.POST("/v1/register", _Auth_Register0_HTTP_Handler(srv))
-}
-
-func _Auth_Logout0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in LogoutReq
-		if err := ctx.Bind(&in); err != nil {
-			return err
-		}
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthLogout)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Logout(ctx, req.(*LogoutReq))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*LogoutReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-func _Auth_Captcha0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in CaptchaReq
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthCaptcha)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Captcha(ctx, req.(*CaptchaReq))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*CaptchaReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-func _Auth_Login0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in LoginReq
-		if err := ctx.Bind(&in); err != nil {
-			return err
-		}
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthLogin)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Login(ctx, req.(*LoginReq))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*LoginReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-func _Auth_UserInfo0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in UserInfoReq
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthUserInfo)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.UserInfo(ctx, req.(*UserInfoReq))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*UserInfoReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-func _Auth_Routers0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in RoutersReq
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthRouters)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Routers(ctx, req.(*RoutersReq))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*RoutersReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-func _Auth_Register0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in RegisterReq
-		if err := ctx.Bind(&in); err != nil {
-			return err
-		}
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthRegister)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Register(ctx, req.(*RegisterReq))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*RegisterReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-type AuthHTTPClient interface {
-	Captcha(ctx context.Context, req *CaptchaReq, opts ...http.CallOption) (rsp *CaptchaReply, err error)
-	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *LoginReply, err error)
-	Logout(ctx context.Context, req *LogoutReq, opts ...http.CallOption) (rsp *LogoutReply, err error)
-	Register(ctx context.Context, req *RegisterReq, opts ...http.CallOption) (rsp *RegisterReply, err error)
-	Routers(ctx context.Context, req *RoutersReq, opts ...http.CallOption) (rsp *RoutersReply, err error)
-	UserInfo(ctx context.Context, req *UserInfoReq, opts ...http.CallOption) (rsp *UserInfoReply, err error)
-}
-
-type AuthHTTPClientImpl struct {
-	cc *http.Client
-}
-
-func NewAuthHTTPClient(client *http.Client) AuthHTTPClient {
-	return &AuthHTTPClientImpl{client}
-}
-
-func (c *AuthHTTPClientImpl) Captcha(ctx context.Context, in *CaptchaReq, opts ...http.CallOption) (*CaptchaReply, error) {
-	var out CaptchaReply
-	pattern := "/v1/captchaImage"
-	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationAuthCaptcha))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
-
-func (c *AuthHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*LoginReply, error) {
-	var out LoginReply
-	pattern := "/v1/login"
-	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationAuthLogin))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
-
-func (c *AuthHTTPClientImpl) Logout(ctx context.Context, in *LogoutReq, opts ...http.CallOption) (*LogoutReply, error) {
-	var out LogoutReply
-	pattern := "/v1/logout"
-	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationAuthLogout))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
-
-func (c *AuthHTTPClientImpl) Register(ctx context.Context, in *RegisterReq, opts ...http.CallOption) (*RegisterReply, error) {
-	var out RegisterReply
-	pattern := "/v1/register"
-	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationAuthRegister))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
-
-func (c *AuthHTTPClientImpl) Routers(ctx context.Context, in *RoutersReq, opts ...http.CallOption) (*RoutersReply, error) {
-	var out RoutersReply
-	pattern := "/v1/getRouters"
-	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationAuthRouters))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
-
-func (c *AuthHTTPClientImpl) UserInfo(ctx context.Context, in *UserInfoReq, opts ...http.CallOption) (*UserInfoReply, error) {
-	var out UserInfoReply
-	pattern := "/v1/getInfo"
-	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationAuthUserInfo))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
